# RustPasswordManager

./: .gitignore  Cargo.toml  Makefile
src/: crypto.rs  lib.rs  main.rs  tmp.rs  vault.rs  window.rs
ui/: main.py
