[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"
crate-type = ["cdylib"]

[lib]
name = "vault_rs"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1"
serde_json = "1.0.149"
zeroize = "1.8.2"

